# gemmology-plugin

./: .gitignore  .lsp.json  CLAUDE.md  OPTIMIZATIONS.md  README.md  pyproject.toml
.claude-plugin/: plugin.json
.claude/agents/: cdl-expert.md  crystallography-expert.md  documentation-expert.md  gemmology-expert.md  geometry-expert.md  svg-rendering-expert.md  test-expert.md  twin-law-expert.md
.github/workflows/: ci.yml  pypi-publish.yml
commands/: crystal-svg.md  identify-gem.md
docs/: crystal-description-language.md
skills/chemical-properties/: SKILL.md
skills/chemical-properties/references/: chemical-formulas.md  chromophores-guide.md  trace-elements-by-origin.md
skills/crystal-visualization/: SKILL.md
skills/crystal-visualization/references/: gemstone-crystals.md
skills/gem-care-durability/: SKILL.md
skills/gem-care-durability/references/: cleaning-guide.md  durability-ratings.md  setting-guide.md
skills/gem-testing-instruments/: SKILL.md
skills/gem-testing-instruments/references/: refractometer-readings.md  spectroscope-patterns.md  testing-procedures.md  visual-examination.md
skills/gemstone-species/: SKILL.md
skills/gemstone-species/references/: rare-gems.md  species-data.md  variety-guide.md
skills/grading-valuation/: SKILL.md
skills/grading-valuation/references/: clarity-types.md  colour-grading-guide.md  origin-premiums.md
skills/inclusions-fingerprints/: SKILL.md
skills/inclusions-fingerprints/references/: inclusion-gallery.md  origin-inclusions.md  synthetic-indicators.md
skills/optical-properties/: SKILL.md
skills/optical-properties/references/: absorption-spectra.md  fluorescence-guide.md  refractive-index-table.md
skills/origin-determination/: SKILL.md
skills/origin-determination/references/: emerald-origins.md  origin-premiums.md  ruby-origins.md  sapphire-origins.md
skills/phenomenal-gems/: SKILL.md
skills/phenomenal-gems/references/: cutting-phenomenal-stones.md  phenomenal-gems-gallery.md
skills/physical-properties/: SKILL.md
skills/physical-properties/references/: crystal-systems.md  hardness-table.md  specific-gravity-table.md
skills/synthetics-simulants/: SKILL.md
skills/synthetics-simulants/references/: growth-methods.md  simulant-properties.md  synthetic-detection.md
skills/treatments-enhancements/: SKILL.md
skills/treatments-enhancements/references/: disclosure-requirements.md  treatment-detection.md  treatment-stability.md
src/gemmology_plugin/: __init__.py  cli.py
tests/: conftest.py  test_cli.py  test_end_to_end_verification.py  test_plugin.py
